--- a/jade/layout.jade
+++ b/jade/layout.jade
@@ -38,7 +38,7 @@ html(lang='en')
               li
                 a(href='outreach.html') Outreach
               li
-                a(href='publicationsandmerchandize.html') Publications & Merchandise
+                a(href='publications_merchandize.html') Publications &amp; Merchandise
               li
                 a(href='contactus.html') Contact Us
       
