--- a/jade/event.jade
+++ b/jade/event.jade
@@ -5,13 +5,13 @@ block content
     .col-md-1
     .col-md-10
       h3 Event title
-      img.img-responsive(src="http://placehold.it/1050x700")
+      img.img-responsive.center-block(src="http://placehold.it/600x400")
     .col-md-1
-  .container-fluid
+  .container-fluid.event-details-tab-container
     ul.nav.nav-tabs
-      li(role='presentation')
-        a(href='#about', role="tab", data-toggle="tab") About this event
       li.active(role='presentation')
+        a(href='#about', role="tab", data-toggle="tab") About this event
+      li(role='presentation')
         a(href='#register', role="tab", data-toggle="tab") Register
       li(role='presentation')
         a(href='#updates', role="tab", data-toggle="tab") Updates
@@ -19,33 +19,33 @@ block content
         a(href='#gallery', role="tab", data-toggle="tab") Gallery
 
     .tab-content
-      .tab-pane#about(role="tabpanel")
+      .tab-pane.active#about(role="tabpanel")
         h4 Description
         p Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras accumsan ornare sagittis. Integer scelerisque ante quis tellus lacinia porta. Nam imperdiet risus at mi faucibus luctus. Praesent tortor arcu, aliquet quis semper eget, posuere a nibh. Duis quis quam lacus. Morbi consequat tellus eget pharetra euismod. 
 
-        table.table
+        table.table.date-time-venue-table
           tr
-            td Date
-            td Date
+            td.date-time-venue-table-left Date
+            td.date-time-venue-table-right Date
           tr
-            td Time
-            td Time
+            td.date-time-venue-table-left Time
+            td.date-time-venue-table-right Time
           tr
-            td Venue
-            td Venue
+            td.date-time-venue-table-left Venue
+            td.date-time-venue-table-right Venue
 
-      .tab-pane.active#register(role="tabpanel")
+      .tab-pane#register(role="tabpanel")
         h4 Register now!!!
         iframe(src='https://docs.google.com/forms/d/1aHRztyJWb6tBtVb9Z4zYMRX4FrsLBJKFdPBwzNWVsbk/viewform?embedded=true', width='760', height='500', frameborder='0', marginheight='0', marginwidth='0') Loading...
 
-      .tab-pane.active#updates(role="tabpanel")
-        .panel
-          h6 Announcement 1
-        .panel
-          h6 Announcement 1
-        .panel
-          h6 Announcement 1
+      .tab-pane#updates(role="tabpanel")
+        .container-fluid.event-updates-container
+          p Lorem ipsum dolor sit amet, consectetur adipiscing elit. In pretium orci nec libero accumsan, nec gravida nisi viverra. Cras porttitor non felis et fringilla.
+        .container-fluid.event-updates-container
+          p Lorem ipsum dolor sit amet, consectetur adipiscing elit. In pretium orci nec libero accumsan, nec gravida nisi viverra. Cras porttitor non felis et fringilla.
+        .container-fluid.event-updates-container
+          p Lorem ipsum dolor sit amet, consectetur adipiscing elit. In pretium orci nec libero accumsan, nec gravida nisi viverra. Cras porttitor non felis et fringilla.
 
 
-      .tab-pane.active#gallery(role="tabpanel")
+      .tab-pane#gallery(role="tabpanel")
         h4 We are building... Exciting images are on the way.
