--- a/jade/all-events.jade
+++ b/jade/all-events.jade
@@ -5,13 +5,31 @@ block content
     h3.text-center All Events
     a.col-xs-12.col-sm-4.col-md-8.zero-margin.zero-padding.first-event-pill(href="event.html")
       img.img-rounded.img-responsive.center-block(src="http://placehold.it/750x500")
+      .overlay.desktop-only
+        h3.overlay-event-title Event title
+      h4.text-center.mobile-only Event title
     a.col-xs-12.col-sm-4.col-md-4.zero-margin.zero-padding.event-pill(href="event.html")
       img.img-rounded.img-responsive.center-block(src="http://placehold.it/750x500")
+      .overlay.desktop-only
+        h3.overlay-event-title Event title
+      h4.text-center.mobile-only Event title
     a.col-xs-12.col-sm-4.col-md-4.zero-margin.zero-padding.event-pill(href="event.html")
       img.img-rounded.img-responsive.center-block(src="http://placehold.it/750x500")
+      .overlay.desktop-only
+        h3.overlay-event-title Event title
+      h4.text-center.mobile-only Event title
     a.col-xs-12.col-sm-4.col-md-4.zero-margin.zero-padding.event-pill(href="event.html")
       img.img-rounded.img-responsive.center-block(src="http://placehold.it/750x500")
+      .overlay.desktop-only
+        h3.overlay-event-title Event title
+      h4.text-center.mobile-only Event title
     a.col-xs-12.col-sm-4.col-md-4.zero-margin.zero-padding.event-pill(href="event.html")
       img.img-rounded.img-responsive.center-block(src="http://placehold.it/750x500")
+      .overlay.desktop-only
+        h3.overlay-event-title Event title
+      h4.text-center.mobile-only Event title
     a.col-xs-12.col-sm-4.col-md-4.zero-margin.zero-padding.event-pill(href="event.html")
       img.img-rounded.img-responsive.center-block(src="http://placehold.it/750x500")
+      .overlay.desktop-only
+        h3.overlay-event-title Event title
+      h4.text-center.mobile-only Event title
