--- a/jade/event.jade
+++ b/jade/event.jade
@@ -8,7 +8,7 @@ block content
       img.img-responsive.center-block(src="http://placehold.it/600x400")
     .col-md-1
   .container-fluid.event-details-tab-container
-    ul.nav.nav-tabs
+    ul.nav.nav-pills
       li.active(role='presentation')
         a(href='#about', role="tab", data-toggle="tab") About this event
       li(role='presentation')
