--- a/jade/index.jade
+++ b/jade/index.jade
@@ -40,18 +40,21 @@ block content
 
   .container-fluid
     h2.text-center Latest News
-    .container-fluid.announcements.center-block
-      .col-md-4
-        img.img-rounded.img-responsive.center-block(src="http://placehold.it/100x100")
-      .col-md-8
-        p Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam tortor turpis, vestibulum vitae sodales in, vulputate non dolor. Curabitur sit amet mauris tortor. Interdum et malesuada fames ac ante ipsum primis in faucibus.
-    .container-fluid.announcements.center-block
-      .col-md-4
-        img.img-rounded.img-responsive.center-block(src="http://placehold.it/100x100")
-      .col-md-8
-        p Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam tortor turpis, vestibulum vitae sodales in, vulputate non dolor. Curabitur sit amet mauris tortor. Interdum et malesuada fames ac ante ipsum primis in faucibus.
-    .container-fluid.announcements.center-block
-      .col-md-4
-        img.img-rounded.img-responsive.center-block(src="http://placehold.it/100x100")
-      .col-md-8
-        p Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam tortor turpis, vestibulum vitae sodales in, vulputate non dolor. Curabitur sit amet mauris tortor. Interdum et malesuada fames ac ante ipsum primis in faucibus.
+    .col-md-2
+    .col-md-8
+      .row.announcements
+        .col-md-3
+          img.img-rounded.img-responsive.center-block(src="http://placehold.it/100x100")
+        .col-md-9
+          p Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam tortor turpis, vestibulum vitae sodales in, vulputate non dolor. Curabitur sit amet mauris tortor. Interdum et malesuada fames ac ante ipsum primis in faucibus.
+      .row.announcements
+        .col-md-3
+          img.img-rounded.img-responsive.center-block(src="http://placehold.it/100x100")
+        .col-md-9
+          p Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam tortor turpis, vestibulum vitae sodales in, vulputate non dolor. Curabitur sit amet mauris tortor. Interdum et malesuada fames ac ante ipsum primis in faucibus.
+      .row.announcements
+        .col-md-3
+          img.img-rounded.img-responsive.center-block(src="http://placehold.it/100x100")
+        .col-md-9
+          p Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam tortor turpis, vestibulum vitae sodales in, vulputate non dolor. Curabitur sit amet mauris tortor. Interdum et malesuada fames ac ante ipsum primis in faucibus.
+    .col-md-2
