--- a/css/custom.css
+++ b/css/custom.css
@@ -1,3 +1,4 @@
+/* layout.html */
 body {
     padding-top: 70px;
 }
@@ -22,12 +23,10 @@ body {
 }
 /* index.html */
 .big-name {
-    /*font-family: 'Oswald', sans-serif;*/
-    font-family: 'Roboto Slab', serif;
-    font-size: 30px;
+  font-family: 'Roboto Slab', serif;
+  font-size: 30px;
 }
 .announcements {
-  width: 60%;
   padding: 5px 2px;
 }
 /* events.html */
@@ -40,6 +39,47 @@ body {
 .event-pill {
   padding: 2px 1px;
 }
+/* all-events page */
+.overlay {
+  position: absolute;
+  top: 1px;
+  left: 1px;
+  width: 100%;
+  height: 100%;
+  background: #000000;
+  color: #FFFFFF;
+  opacity: 0;
+  border-radius: 2px;
+  z-index: 10;
+  transition: opacity 1s ease;
+  -moz-transition: opacity 1s ease;
+  -webkit-transition: opacity 1s ease;
+}
+.overlay-event-title {
+  position: relative;
+  top: 50%;
+  text-align: center;
+  padding: 0 5%;
+}
+.overlay:hover {  
+  opacity: 0.7
+}
+@media (min-width: 992px) {
+  .desktop-only {
+    display: block;
+  }
+  .mobile-only {
+    display: none;
+  }
+}
+@media (max-width: 992px) {
+  .desktop-only {
+    display: none;
+  }
+  .mobile-only {
+    display: block;
+  }
+}
 /* event page */
 .event-details-tab-container {
   margin: 20px 10%;
@@ -47,6 +87,12 @@ body {
 .date-time-venue-table {
   width: 50%;
   margin: auto;
+}
+@media (max-width: 992px) {
+  .date-time-venue-table {
+    width: 100%;
+    margin: auto;
+  }
 }
 .date-time-venue-table-left {
   width: 40%;
